--- a/style.css
+++ b/style.css
@@ -1,14 +1,21 @@
 .navbar { 
         color: #ffffff;
         background-color: #ffffff;
+        padding: 0;
+        /* margin: 10px */
 }
 
 .name {
         background-color: #4aaaa5;
+        height: 50px
 }
 
 .buttons {
         border-style: none solid none none;
         border-color: #4aaaa5;
        
+}
+
+.jumbotron {
+        margin: 80px auto;
 }
