--- a/style.css
+++ b/style.css
@@ -17,5 +17,16 @@
 }
 
 .jumbotron {
-        margin: 80px auto;
+        margin: 40px auto;
+        background-color: #ffffff;
+}
+
+.content {
+        border-radius: 0;
+}
+
+.line {
+        width: 100%;
+        height: 1px;
+        background-color: black;
 }
