--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 .navbar { 
         color: #ffffff;
-        background-color: #ffffff;
+        background-color: rgb(66, 66, 66);
         padding: 0;
-        /* margin: 10px */
+       
 }
 
 .name {
@@ -26,7 +26,27 @@
 }
 
 .line {
-        width: 100%;
+       
         height: 1px;
-        background-color: black;
+        background-color: #4aaaa5;
 }
+
+.body {
+        background-image: url(images/dark-honeycomb.png)
+}
+
+.contact-send {
+        background-color: #4aaaa5;
+        color: #ffffff;
+        border-radius: 0;
+        margin: 10px 0 0 0 ;
+}
+
+.footer {
+        background-color: rgb(66, 66, 66);
+        height: 50px;
+        border-style: solid none none none;
+        border-color: #4aaaa5;
+        
+}
+
